Long text/URL overlap fix using dont-break-out class in css

--- a/statische frontend/css/extra_layout.css
+++ b/statische frontend/css/extra_layout.css
@@ -95,3 +95,17 @@ body, html
 .header
 {
 }
+
+.dont-break-out{
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    
+    -ms-word-break: break-all;
+    word-break: break-word;
+    
+    /* Adds a hyphen where the word breaks, if supported */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
